--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -19,20 +19,27 @@ http {
         root /var/www/public;
         index index.php index.html;
 
-        # Serve static files (Bootstrap, JS, CSS, images)
-        location / {
-            try_files $uri $uri/ /index.php?$query_string;
+        # Serve static files (CSS, JS, images) directly
+        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg)$ {
+            try_files $uri =404;
+            expires 1M;
+            access_log off;
         }
 
         # Handle PHP files
         location ~ \.php$ {
             include fastcgi_params;
-            fastcgi_pass 127.0.0.1:9000;
+            fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
 
-        # Deny access to .ht* files
+        # All other requests fallback to Laravel
+        location / {
+            try_files $uri $uri/ /index.php?$query_string;
+        }
+
+        # Deny access to hidden files
         location ~ /\.ht {
             deny all;
         }
