--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -19,14 +19,14 @@ http {
         root /var/www/public;
         index index.php index.html;
 
-        # Serve static files (CSS, JS, images) directly
+        # Serve static files directly
         location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg)$ {
             try_files $uri =404;
             expires 1M;
             access_log off;
         }
 
-        # Handle PHP files
+        # Handle PHP files via Unix socket
         location ~ \.php$ {
             include fastcgi_params;
             fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;
@@ -34,7 +34,7 @@ http {
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
 
-        # All other requests fallback to Laravel
+        # Fallback to Laravel for all other requests
         location / {
             try_files $uri $uri/ /index.php?$query_string;
         }
