--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,8 +1,10 @@
+# Use PHP 8.2 FPM base image
 FROM php:8.2-fpm
 
 # Install system packages
 RUN apt-get update && apt-get install -y \
-    git curl unzip libpq-dev libonig-dev libzip-dev zip nginx \
+    git curl unzip libpq-dev libonig-dev libzip-dev zip \
+    nginx nodejs npm \
     libpng-dev libjpeg-dev libfreetype6-dev \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install pdo pdo_mysql pdo_pgsql mbstring zip gd bcmath
@@ -10,6 +12,7 @@ RUN apt-get update && apt-get install -y \
 # Install Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
+# Set working directory
 WORKDIR /var/www
 
 # Copy application code
@@ -18,6 +21,10 @@ COPY . .
 # Install PHP dependencies
 RUN composer install --optimize-autoloader --no-dev
 
+# Install Node dependencies and build frontend assets
+RUN npm install
+RUN npm run build
+
 # Set correct permissions
 RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache
 RUN chmod -R 775 /var/www/storage /var/www/bootstrap/cache
@@ -25,10 +32,11 @@ RUN chmod -R 775 /var/www/storage /var/www/bootstrap/cache
 # Create storage symlink
 RUN php artisan storage:link || true
 
-# Copy Nginx config
+# Copy Nginx configuration
 COPY deploy/nginx.conf /etc/nginx/nginx.conf
 
+# Expose port 80
 EXPOSE 80
 
-# Start PHP-FPM and Nginx
-CMD service nginx start && php-fpm
+# Start PHP-FPM (foreground) and Nginx
+CMD ["sh", "-c", "php-fpm -F && nginx -g 'daemon off;'"]
