--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -19,15 +19,15 @@ http {
         root /var/www/public;
         index index.php index.html;
 
-        # Serve static files (Bootstrap, JS, CSS, images)
+        # Serve static files (CSS, JS, images)
         location / {
             try_files $uri $uri/ /index.php?$query_string;
         }
 
-        # Handle PHP files
+        # Handle PHP files via PHP-FPM socket
         location ~ \.php$ {
             include fastcgi_params;
-            fastcgi_pass 127.0.0.1:9000;
+            fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
