--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -24,13 +24,13 @@ http {
             try_files $uri $uri/ /index.php?$query_string;
         }
 
-        # Handle PHP files via PHP-FPM socket
         location ~ \.php$ {
             include fastcgi_params;
-            fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;
+            fastcgi_pass 127.0.0.1:9000;  # use TCP port
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
+
 
         # Deny access to .ht* files
         location ~ /\.ht {
