--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -3,7 +3,7 @@ FROM php:8.2-fpm
 
 # Install system packages
 RUN apt-get update && apt-get install -y \
-    git curl unzip libpq-dev libonig-dev libzip-dev zip nginx \
+    git curl unzip libpq-dev libonig-dev libzip-dev zip \
     libpng-dev libjpeg-dev libfreetype6-dev \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install pdo pdo_mysql pdo_pgsql mbstring zip gd bcmath
@@ -33,12 +33,8 @@ RUN php artisan config:cache
 RUN php artisan route:cache
 RUN php artisan view:cache
 
-# Copy Nginx config
-COPY deploy/nginx.conf /etc/nginx/nginx.conf
+# Expose port 8000 for Laravel
+EXPOSE 8000
 
-# Expose port 80
-EXPOSE 80
-
-# Start PHP-FPM and Nginx in foreground
-CMD ["sh", "-c", "php-fpm & nginx -g 'daemon off;'"]
-
+# Start Laravel built-in server
+CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
