--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -5,7 +5,7 @@ events {
     worker_connections  1024;
 }
 
-https {
+http {
     include       mime.types;
     default_type  application/octet-stream;
 
@@ -19,18 +19,18 @@ https {
         root /var/www/public;
         index index.php index.html;
 
-        # Serve static files (CSS, JS, images)
+        # Serve static files (Bootstrap, JS, CSS, images)
         location / {
             try_files $uri $uri/ /index.php?$query_string;
         }
 
+        # Handle PHP files
         location ~ \.php$ {
             include fastcgi_params;
-            fastcgi_pass 127.0.0.1:9000;  # use TCP port
+            fastcgi_pass 127.0.0.1:9000;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
-
 
         # Deny access to .ht* files
         location ~ /\.ht {
