--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -19,7 +19,7 @@ http {
         root /var/www/public;
         index index.php index.html;
 
-        # Serve static files (Bootstrap, JS, CSS, images)
+        # Serve static files (CSS, JS, images)
         location / {
             try_files $uri $uri/ /index.php?$query_string;
         }
@@ -32,7 +32,7 @@ http {
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
 
-        # Deny access to .ht* files
+        # Deny access to hidden files
         location ~ /\.ht {
             deny all;
         }
