--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -3,18 +3,31 @@ FROM php:8.2-apache
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
-    zip unzip git curl libzip-dev libpng-dev libonig-dev libxml2-dev libpq-dev
+    zip unzip git curl libzip-dev libpng-dev libonig-dev libxml2-dev libpq-dev \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Install PHP extensions (add pdo_pgsql)
-RUN docker-php-ext-install pdo pdo_mysql pdo_pgsql
+# Install PHP extensions
+RUN docker-php-ext-install pdo pdo_mysql pdo_pgsql zip gd mbstring exif pcntl bcmath
 
 # Enable apache modules
 RUN a2enmod rewrite
 
-# Set Apache DocumentRoot to /public
+# Set Apache DocumentRoot
 ENV APACHE_DOCUMENT_ROOT=/var/www/html/public
-RUN sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf
-RUN sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf
+
+# Create custom Apache config
+RUN echo '<VirtualHost *:80>\n\
+    DocumentRoot ${APACHE_DOCUMENT_ROOT}\n\
+    \n\
+    <Directory ${APACHE_DOCUMENT_ROOT}>\n\
+        AllowOverride All\n\
+        Require all granted\n\
+        Options -Indexes +FollowSymLinks\n\
+    </Directory>\n\
+    \n\
+    ErrorLog ${APACHE_LOG_DIR}/error.log\n\
+    CustomLog ${APACHE_LOG_DIR}/access.log combined\n\
+</VirtualHost>' > /etc/apache2/sites-available/000-default.conf
 
 # Copy application code
 COPY . /var/www/html
@@ -23,9 +36,34 @@ COPY . /var/www/html
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 # Install PHP dependencies
-RUN composer install --no-dev --optimize-autoloader
+RUN composer install --no-dev --optimize-autoloader --no-interaction --no-progress
 
-# Set permissions
-RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache
+# Clear Laravel caches
+RUN php artisan config:clear \
+    && php artisan cache:clear \
+    && php artisan view:clear \
+    && php artisan route:clear
+
+# Create .htaccess if missing
+RUN if [ ! -f "/var/www/html/public/.htaccess" ]; then \
+    echo 'Creating .htaccess file'; \
+    echo '<IfModule mod_rewrite.c>\n\
+    RewriteEngine On\n\
+    RewriteCond %{REQUEST_FILENAME} !-d\n\
+    RewriteCond %{REQUEST_FILENAME} !-f\n\
+    RewriteRule ^ index.php [L]\n\
+</IfModule>' > /var/www/html/public/.htaccess; \
+fi
+
+# Set proper permissions
+RUN chmod -R 755 /var/www/html/public \
+    && chmod -R 775 /var/www/html/storage /var/www/html/bootstrap/cache \
+    && chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache
+
+# Verify files are accessible
+RUN echo "=== Verifying asset files ===" \
+    && ls -la /var/www/html/public/css/ 2>/dev/null | head -10 \
+    && echo "---" \
+    && ls -la /var/www/html/public/js/ 2>/dev/null | head -10
 
 EXPOSE 80
