--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,63 +1,36 @@
-# PHP with Apache
-FROM php:8.2-apache
+FROM php:8.2-fpm
 
-# Install system dependencies
+# Install system packages
 RUN apt-get update && apt-get install -y \
-    zip unzip git curl libzip-dev libpng-dev libonig-dev libxml2-dev libpq-dev \
-    && apt-get clean && rm -rf /var/lib/apt/lists/*
-
-# Install PHP extensions
-RUN docker-php-ext-install pdo pdo_mysql pdo_pgsql zip gd mbstring exif pcntl bcmath
-
-# Enable apache modules
-RUN a2enmod rewrite
-
-# Set Apache DocumentRoot
-ENV APACHE_DOCUMENT_ROOT=/var/www/html/public
-
-# Create custom Apache config
-RUN echo '<VirtualHost *:80>\n\
-    DocumentRoot ${APACHE_DOCUMENT_ROOT}\n\
-    \n\
-    <Directory ${APACHE_DOCUMENT_ROOT}>\n\
-        AllowOverride All\n\
-        Require all granted\n\
-        Options -Indexes +FollowSymLinks\n\
-    </Directory>\n\
-    \n\
-    ErrorLog ${APACHE_LOG_DIR}/error.log\n\
-    CustomLog ${APACHE_LOG_DIR}/access.log combined\n\
-</VirtualHost>' > /etc/apache2/sites-available/000-default.conf
-
-# Copy application code
-COPY . /var/www/html
+    git curl unzip libpq-dev libonig-dev libzip-dev zip nginx \
+    libpng-dev libjpeg-dev libfreetype6-dev \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg \
+    && docker-php-ext-install pdo pdo_mysql pdo_pgsql mbstring zip gd bcmath
 
 # Install Composer
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
+
+# Set working directory
+WORKDIR /var/www
+
+# Copy application code
+COPY . .
 
 # Install PHP dependencies
-RUN composer install --no-dev --optimize-autoloader --no-interaction --no-progress
+RUN composer install --optimize-autoloader --no-dev
 
-# Create .htaccess if missing
-RUN if [ ! -f "/var/www/html/public/.htaccess" ]; then \
-    echo 'Creating .htaccess file'; \
-    echo '<IfModule mod_rewrite.c>\n\
-    RewriteEngine On\n\
-    RewriteCond %{REQUEST_FILENAME} !-d\n\
-    RewriteCond %{REQUEST_FILENAME} !-f\n\
-    RewriteRule ^ index.php [L]\n\
-</IfModule>' > /var/www/html/public/.htaccess; \
-fi
+# Set permissions
+RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache /var/www/public
+RUN chmod -R 775 /var/www/storage /var/www/bootstrap/cache /var/www/public
 
-# Set proper permissions
-RUN chmod -R 755 /var/www/html/public \
-    && chmod -R 775 /var/www/html/storage /var/www/html/bootstrap/cache \
-    && chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache
+# Create storage symlink
+RUN php artisan storage:link || true
 
-# Verify files are accessible
-RUN echo "=== Verifying asset files ===" \
-    && ls -la /var/www/html/public/css/ 2>/dev/null | head -10 \
-    && echo "---" \
-    && ls -la /var/www/html/public/js/ 2>/dev/null | head -10
+# Copy Nginx config
+COPY deploy/nginx.conf /etc/nginx/nginx.conf
 
+# Expose port 80
 EXPOSE 80
+
+# Start Nginx and PHP-FPM
+CMD ["sh", "-c", "php-fpm & nginx -g 'daemon off;'"]
